# RAG-MCP

./: README.md  main.py  pyproject.toml
app/: config.py  server.py
app/core/: chunking.py  context_compressor.py  embeddings.py  hybrid_search.py  llm.py  rag_planner.py  reranker.py  retriever.py  router.py  tool_calling_agent.py  vector_store.py
app/resources/: stats.py
app/schemas/: answer.py  ingest.py  search.py
app/tools/: answer.py  health.py  ingest.py  search.py
app/utils/: logger.py  ytils.py
